[package]
name = "hello"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"

serde_json = "1.0"